Working introduction phase, numerous bug fixes, basic UI cleanup.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -176,8 +176,6 @@
 
             {{#ifnoteq section 'homepage'}}
 
-            <img id="background-logo" style="display:none" src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318386/at-stake/layout/logo-bg.svg">
-            
                 <div class="col-sm-12 col-lg-12" id="gameContent">
 
                     {{> shared/resuming }}
@@ -191,8 +189,12 @@
                 
                     <div class="col-sm-6 col-xs-6">
                         <button id="btn-role-card"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role"></button>
-                        <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540566894/at-stake/icons/facilitator"></button>
-                        <button id="btn-menu">Menu</button>
+                        <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540839844/at-stake/icons/facilitator"></button>
+                        <div id="name-role">
+                            <span id="name"></span>
+                            <span id="role"></span>
+                        </div>
+                        
                     </div>
                     
                 </footer>
