--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -18,10 +18,12 @@
   deck,
   gameEnded = false,
   timerActive = false,
+    playersReady = false,
 	gameContainer,
 
   playerId,
   playerUID,
+  playerName,
   isDecider,
 	timeline = new TimelineLite(),
 	mobileDetect = new MobileDetect(window.navigator.userAgent),
@@ -369,28 +371,12 @@
 	    $.when($($('.screen:not(.skip)')[0]).remove()).then(function() {
 
 	        var newScreen = $('.screen:not(.skip)')[0];
-	        $(newScreen).trigger('show');
+	        $(newScreen).trigger('show');9
+
+
 
 	        runMods();
-
-	        var timerPreview = $($('.screen:not(.skip)')[0]).find('.timer.preview');
-	        var hasTimer = timerPreview.length === 1;
-	        if(hasTimer) {
-	            new ProgressBar.Circle(
-	              '.screen .timer.preview', 
-	              {
-	                    color: '#fff',
-	                    strokeWidth: 6,
-	                    trailColor: 'rbga(235, 235, 235, 0.5)',
-	                    trailWidth: 0.8,
-	                    fill: '#ff3d6b',
-	                    text: {
-	                      value: $(timerPreview[0]).data('duration')
-	                    }
-	              }
-	            );
-	        } 
-
+			
 	    });
 
 	}
